Prevents DcpWidget size changes on appletpage openings  ("layouting flicker")

--- a/controlpanel/theme/style/duicontrolpanel.css
+++ b/controlpanel/theme/style/duicontrolpanel.css
@@ -1,9 +1,3 @@
-MApplicationWindowStyle#MApplicationWindowStyleInverted {
-    navigation-bar-style-name: "MNavigationBarStyleInverted";
-    tool-bar-style-name: "MToolBarStyleInverted";
-    tab-bar-style-name: "MToolbarTabStyleInverted";
-}
-
 MWindowStyle {
     x11-startup-pixmap: ;
     startup-fill-color: black;
